2006-01-23  Bruno Haible  <bruno@clisp.org>

	* gettextize.in (func_tmpdir): Invoke mktemp without option -q, because
	in some versions of mktemp this option has the effect that mktemp
	outputs nothing at all.
	(func_version): Bump copyright year.
	* autopoint.in (func_tmpdir): Invoke mktemp without option -q.
	(func_version): Bump copyright year.
	Patch by Ralf Wildenhues <Ralf.Wildenhues@gmx.de>.

2005-09-18  Bruno Haible  <bruno@clisp.org>

	* autopoint.in (func_find_curr_installdir): Really remove the temporary
	directory after use.
	* gettextize.in (func_find_curr_installdir): Likewise.

2005-08-26  Bruno Haible  <bruno@clisp.org>

	* po-mode.el (po-team-name-to-code): Add support for Old English,
	Hyam, Jju, Tyap, Kagoma, Maithili, Mayan, Nahuatl, Low Saxon,
	Northern Sotho, Páez, Tetum, Zapotec.

2005-07-24  Bruno Haible  <bruno@clisp.org>

	Tidy up exported symbols.
	* gettextize.in (m4filelist): Add visibility.m4.

2005-07-26  Bruno Haible  <bruno@clisp.org>

	* autopoint.in (datarootdir): New variable.
	* gettextize.in (datarootdir): New variable.

2005-07-16  Bruno Haible  <bruno@clisp.org>

	* gettextize.in (m4filelist): Add lock.m4.

2005-07-09  Bruno Haible  <bruno@clisp.org>

	* po-mode.el (po-validate): Require the 'compile' module before
	accessing it.
	Report and patch by Sven Joachim <sven_joachim@web.de>.

2005-05-23  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.5 released.

2005-05-23  Bruno Haible  <bruno@clisp.org>

	* autopoint.in: Update for 0.14.5.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.4 released.

2005-04-11  Bruno Haible  <bruno@clisp.org>

	* autopoint.in: Update for 0.14.4.

2005-03-14  Bruno Haible  <bruno@clisp.org>

	* gettext-0.14.3 released.

2004-10-23  Bruno Haible  <bruno@clisp.org>

	* start-po-el: New file.
	* Makefile.am (lisp_LISP): Add it.

2005-03-08  Bruno Haible  <bruno@clisp.org>

	* autopoint.in: Update for 0.14.3.

2005-03-08  Bruno Haible  <bruno@clisp.org>
