@@ -1,3 +1,9 @@
+2006-04-12  Bruno Haible  <bruno@clisp.org>
+
+	* autopoint.in (func_find_curr_installdir): Handle the case of a
+	symbolic link pointing to an absolute pathname correctly.
+	* gettextize.in (func_find_curr_installdir): Likewise.
+
 2006-01-23  Bruno Haible  <bruno@clisp.org>
 
 	* gettextize.in (func_tmpdir): Invoke mktemp without option -q, because
